Projects/47 (BlueGreenCanaryDeployment)/k8s/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-canary
spec:
  selector:
    app: java-app
    track: green
  ports:
    - name: http
      port: 80
      targetPort: 8080
